samples/_failures_safe/1761247549_b7ca87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ebea378.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7ebea378.c:169:13: error: expected expression at end of input
  169 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_7ebea378.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ebea378.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ebea378.c:169:13: error: expected declaration or statement at end of input
